Add missing messages endpoints
