# internal/controller/message.go
@@ -4,6 +4,7 @@ import (
 	"sync"
 
 	db_model "github.com/boxboxjason/jukebox/internal/model"
+	"github.com/boxboxjason/jukebox/pkg/utils/httputils"
 	"gorm.io/gorm"
 )
 
@@ -46,7 +47,7 @@ func CreateMessage(db *gorm.DB, message string, user *db_model.User) (*db_model.
 }
 
 // ================= Read =================
-func GetMessages(db *gorm.DB) ([]*db_model.Message, error) {
+func GetMessages(db *gorm.DB, ids []int, sender_ids []int, flagged []bool, censored []bool, removed []bool, contains []string) ([]*db_model.Message, error) {
 	// Open db connection
 	if db == nil {
 		var err error
@@ -57,7 +58,19 @@ func GetMessages(db *gorm.DB) ([]*db_model.Message, error) {
 		defer db_model.CloseConnection(db)
 	}
 
-	return db_model.GetAllVisibleMessages(db)
+	for _, id := range ids {
+		if id < 0 {
+			return nil, httputils.NewBadRequestError("id must be a positive integer")
+		}
+	}
+
+	for _, sender_id := range sender_ids {
+		if sender_id < 0 {
+			return nil, httputils.NewBadRequestError("sender_id must be a positive integer")
+		}
+	}
+
+	return db_model.GetMessages(db, ids, sender_ids, flagged, censored, removed, contains)
 }
 
 func GetMessage(id int) (*db_model.Message, error) {
@@ -73,7 +86,7 @@ func GetMessage(id int) (*db_model.Message, error) {
 // ================= Update =================
 
 // UpdateMessage updates a message in the database
-func UpdateMessage(db *gorm.DB, id int, message string) (*db_model.Message, error) {
+func UpdateMessage(db *gorm.DB, db_message *db_model.Message, message string, flagged []bool, censored []bool, removed []bool) (*db_model.Message, error) {
 	// Open db connection
 	if db == nil {
 		var err error
@@ -84,15 +97,24 @@ func UpdateMessage(db *gorm.DB, id int, message string) (*db_model.Message, erro
 		defer db_model.CloseConnection(db)
 	}
 
-	// Retrieve the message
-	db_message, err := db_model.GetMessageByID(db, id)
-	if err != nil {
-		return nil, err
+	if len(message) > 0 {
+		db_message.Content = message
+	}
+
+	if len(flagged) > 0 {
+		db_message.Flagged = flagged[0]
+	}
+
+	if len(censored) > 0 {
+		db_message.Censored = censored[0]
+	}
+
+	if len(removed) > 0 {
+		db_message.Removed = removed[0]
 	}
 
 	// Update the message
-	db_message.Content = message
-	err = db_message.UpdateMessage(db)
+	err := db_message.UpdateMessage(db)
 	return db_message, err
 }
 
@@ -120,7 +142,7 @@ func DeleteMessage(db *gorm.DB, id int) error {
 	return db_message.DeleteMessage(db)
 }
 
-func DeleteMessages(db *gorm.DB) error {
+func DeleteMessages(db *gorm.DB, ids []int, sender_ids []int, flagged []bool, censored []bool, removed []bool, contains []string) error {
 	// Open db connection
 	if db == nil {
 		var err error
@@ -132,15 +154,11 @@ func DeleteMessages(db *gorm.DB) error {
 	}
 
 	// Retrieve all messages
-	messages, err := db_model.GetAllMessages(db)
+	messages, err := db_model.GetMessages(db, ids, sender_ids, flagged, censored, removed, contains)
 	if err != nil {
 		return err
 	}
 
 	// Delete all messages
 	return db_model.DeleteMessages(db, messages)
-}
-
-func UserHasPermissionToDeleteMessage(user *db_model.User, message *db_model.Message) bool {
-	return message.Sender.ID == user.ID || user.Admin
 }
